# TestBoard

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  prd.md  tech-stack.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_sync_case_report_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: case_reports.py  dashboard.py  failure_cases.py  runs.py  stats.py  test_reports.py
backend/app/core/: config.py
backend/app/db/: check.py  session.py
backend/app/dev/: seed_data.py
backend/app/models/: __init__.py  runner.py  test_case_report.py  test_case_result.py  test_run.py
backend/app/repositories/: runners.py  test_case_reports.py  test_case_results.py  test_runs.py
backend/app/schemas/: case_report.py  dashboard.py  failure_case.py  run.py  stats.py  test_report.py
backend/app/services/: dashboard_summary.py  report_file_storage.py  stats_summary.py  test_report_importer.py
backend/tests/: test_health.py
backend/tests/api/: test_case_reports.py  test_dashboard.py  test_failure_cases.py  test_runs.py  test_stats.py  test_test_reports.py
backend/tests/db/: test_migrations.py  test_models.py
backend/tests/dev/: test_seed_data.py
docs/: development-roadmap.md
docs/superpowers/plans/: 2026-07-06-stats-trends-visual-refresh.md  2026-07-10-frontend-visual-refresh.md  2026-07-13-dev-seed-reports.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
(+75 files in other folders)
